src/objects/MentorCourseAssignToBanner__c.object
<CustomObject>
    <fields>
        <fullName>AcademicTableKey__c</fullName>
        <label>AcademicTableKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionNeeded__c</fullName>
        <label>Action Needed</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CourseNumber__c</fullName>
        <label>Course Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSynchronized__c</fullName>
        <description>The date/time the synchronization job last processed this record.</description>
        <label>Last Synchronized</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MentorCourseAssignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor Course Assignment</label>
        <referenceTo>MentorCourseAssignment__c</referenceTo>
        <relationshipLabel>Mentor Course Assigns To Banner</relationshipLabel>
        <relationshipName>MentorCourseAssignsToBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MentorOfficeHours__c</fullName>
        <description>Text value of JSON mentor office hours</description>
        <label>Mentor Office Hours</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MentorPIDM__c</fullName>
        <label>Mentor PIDM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PushResult__c</fullName>
        <label>Push Result</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RefId__c</fullName>
        <externalId>true</externalId>
        <label>Ref Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Mentor Course Assign To Banner</label>
    <nameField>
        <displayFormat>MCA-{0000}</displayFormat>
        <label>Mentor Course Assign To Banner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentor Course Assigns To Banner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>